src/test/ui/consts/const-eval/feature-gate-const_panic.stderr
error[E0658]: panicking in constants is unstable
  --> $DIR/feature-gate-const_panic.rs:3:15
   |
LL | const Z: () = panic!("cheese");
   |               ^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/51999
   = help: add #![feature(const_panic)] to the crate attributes to enable
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error[E0658]: panicking in constants is unstable
  --> $DIR/feature-gate-const_panic.rs:9:15
   |
LL | const X: () = unimplemented!();
   |               ^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/51999
   = help: add #![feature(const_panic)] to the crate attributes to enable
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error[E0658]: panicking in constants is unstable
  --> $DIR/feature-gate-const_panic.rs:6:15
   |
LL | const Y: () = unreachable!();
   |               ^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/51999
   = help: add #![feature(const_panic)] to the crate attributes to enable
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0658`.
